--- a/style.css
+++ b/style.css
@@ -287,10 +287,10 @@ input:focus {
 
 /* ---------------------------------------------------------------------------- FORM VALIDATION  */
 input:user-invalid {
-  outline: 2px solid red;
+  outline: 2px solid hsl(0, 100%, 50%);
 }
 input:user-valid {
-  outline: 2px solid green;
+  outline: 2px solid hsl(120, 100%, 25%);
 }
 input ~ .error__msg {
   display: none;
@@ -307,16 +307,18 @@ input:user-invalid ~ .error__msg {
 .user__interface{
   flex-direction: column;
   width:80%;
-  max-height: 35rem;
+  max-height: 80%;
+  padding: 1rem;
+  gap:1rem;
   
 }
 canvas {
-  max-height:20rem;
+  max-height:15rem;
 }
 .transactions__container {
   display: flex;
   flex-direction: column;
-  max-height: 10rem;
+  max-height: 80%;
   overflow-y: scroll;
 }
 
@@ -324,6 +326,7 @@ canvas {
 .transaction__details {
   display: flex;
   border-radius: 1rem;
+  justify-content: space-between;
 }
 .transactions__list {
   display: flex;
@@ -333,7 +336,7 @@ canvas {
   font-weight: 600;
 }
 .transaction__details {
-  padding: .5rem;
+  padding: 1rem;
   margin: .8rem .5rem;
   background-color: var(--clr__white);
   color: var(--clr__lightblue);
@@ -353,7 +356,7 @@ canvas {
 .signup__card,
 .login__card,
 .user__interface {
-  max-width: 320px;
+  min-width: 320px;
   max-height: 550px;
   overflow-y: scroll;
 }
@@ -366,9 +369,7 @@ nav {
 button {
   transform: scale(0.9);
 }
-svg {
-  display: none;
-}
+
 
 .signup__card > form,
 .login__card > form {
