--- a/style.css
+++ b/style.css
@@ -225,9 +225,7 @@ svg {
 }
 
 /* ---------------------------------------------------------------------------- SIGNUP CARD & LOGIN CARD  */
-/* .signup__card {
-  display: none;
-} */
+
 .signup__card,
 .login__card {
   max-width: 30rem;
@@ -312,8 +310,15 @@ input:user-invalid ~ .error__msg {
   gap:1rem;
   
 }
+.charts__container{
+  display: flex;
+  max-width: 100%;
+  max-height: 100%;
+  justify-content: space-between;
+}
 canvas {
-  max-height:15rem;
+  max-width: 50%;
+  max-height: 15rem;
 }
 .transactions__container {
   display: flex;
@@ -385,6 +390,14 @@ align-items: stretch
 }
 .user__interface {
   font-size: .8rem;
+}
+.charts__container {
+  overflow-x: scroll;
+  min-height: 20rem;
+}
+canvas {
+  min-width: 100%;
+  min-height: 100%;
 }
 .date,
 .balance {
